# excel-writer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: .~lock.output.xlsx#  client.py  excel_writer.py  output.xlsx  sheet_config.py  structs.py
src/excel_writer/: __init__.py  excel.py  excel_writer.py  structs.py
tests/: client.py  sample_excelwriter.py  sample_xlsxwriter.py
